# wise-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: build.yml
crates/wise-cli/: Cargo.toml
crates/wise-cli/src/: config.rs  main.rs  output.rs
crates/wise-cli/src/commands/: activities.rs  addresses.rs  balances.rs  bank_details.rs  card_orders.rs  card_transactions.rs  cards.rs  cases.rs  currencies.rs  direct_debits.rs  disputes.rs  mod.rs  profiles.rs  quotes.rs  rates.rs  recipients.rs  statements.rs  transfers.rs  user.rs
crates/wise-client/: Cargo.toml
crates/wise-client/src/: client.rs  config.rs  error.rs  lib.rs
crates/wise-client/src/api/: activities.rs  addresses.rs  balances.rs  bank_details.rs  batch.rs  card_orders.rs  card_transactions.rs  cards.rs  cases.rs  contacts.rs  currencies.rs  direct_debits.rs  disputes.rs  mod.rs  profiles.rs  quotes.rs  rates.rs  recipients.rs  settlements.rs  statements.rs  three_ds.rs  transfers.rs  user.rs
crates/wise-client/src/models/: activity.rs  address.rs  balance.rs  bank_details.rs  batch.rs  card.rs  card_order.rs  card_transaction.rs  case.rs  contact.rs  currency.rs  datetime.rs  direct_debit.rs  dispute.rs  mod.rs  profile.rs  quote.rs  rate.rs  recipient.rs  settlement.rs  statement.rs  three_ds.rs  transfer.rs  user.rs
crates/wise-mcp/: Cargo.toml
crates/wise-mcp/src/: main.rs  server.rs  tools.rs
docs/: api-reference.md  changelog.md  guides.md  urls.txt
docs/api-reference/: 3ds.md  activity.md  address.md  balance-statement.md  balance.md  bank-account-details.md  batch-group.md  bulk-settlement.md  card-kiosk-collection.md  card-order.md  card-transaction.md  card.md  case.md  claim-account.md  client-credentials-token.md  comparison.md  contact.md  currencies.md  delivery-estimate.md  deprecated.md  direct-debit-account.md  disputes.md  facetec.md  jose.md  kyc-review.md  multi-currency-account.md  one-time-token.md  payin-deposit-detail.md  profile.md  push-provisioning.md  quote.md  rate.md  recipient.md  simulation.md  spend-controls.md  spend-limits.md  strong-customer-authentication.md  transfer.md  user-security.md  user-tokens.md  (+3 more)
docs/guides/: developer.md  industries.md  product.md  regional.md
docs/guides/developer/: auth-and-security.md  errors.md  language-support.md  open-banking.md  sandbox-and-production.md  versioning.md  webhooks.md
docs/guides/industries/: banks-and-institutes.md  education.md  spend.md  (+3 more)
scripts/: download-docs.sh  scrape-docs.js
(+116 files in other folders)
