[package]
name = "wise-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for the Wise Platform API"

[[bin]]
name = "wise-mcp"
path = "src/main.rs"

[dependencies]
wise-client = { path = "../wise-client" }
rmcp = { version = "0.11", features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
anyhow = "1.0"
uuid = "1.19.0"
chrono = "0.4.42"
